--- a/onboarding.html
+++ b/onboarding.html
@@ -1264,12 +1264,20 @@ Cache-Control: no-store
     mobile: Webapp\nin mobile
     portal: DOM\nwebserver
     verifier: VC Verifier
-    user -> laptop: (1) Access DOM portal            
+    user -> laptop: (1) Access DOM portal
     laptop -> portal: (1) Access DOM
+    # -(1) The user (GoodAir employee) accesses the DOME portal or to perform the onboarding process.
     portal -> laptop: (2) HTTP 302 (redirect)
+    # -(2) The portal redirects the user to the login page of the Verifier component of DOME Onboarding. The page shows a button labelled “Login with Verifiable Credentials” or something similar.
+    # -+ Esta es una linea añadida a la anterior
+    # -+ Esta es una linea añadida a la anterior
+    # -+ Esta es una linea añadida a la anterior
+    # -+ Esta es una linea añadida a la anterior
     laptop -> verifier: (3) Login page
+    # -(3) The user clicks the button causing the generation and display of a QR, containing inside the URL of the `/authentication-requests` endpoint of the Verifier component.
     verifier -> mobile: (4) Scan QR code
     mobile -> verifier: (4) /authentication-requests
+    # -(4) The user scans the QR with her mobile and the mobile calls the `/authentication-requests` endpoint.
  -->
 
 <?xml version="1.0" encoding="utf-8"?><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" d2Version="v0.4.0-HEAD" preserveAspectRatio="xMinYMin meet" viewBox="0 0 945 879"><svg id="d2-svg" class="d2-3051653578" width="945" height="879" viewBox="-89 -86 945 879"><rect x="-89.000000" y="-86.000000" width="945.000000" height="879.000000" rx="0.000000" class=" fill-N7" stroke-width="0" /><style type="text/css"><![CDATA[
@@ -1379,13 +1387,17 @@ Cache-Control: no-store
 <rect x="491.000000" y="541.000000" width="109" height="21" fill="black"></rect>
 <rect x="454.000000" y="611.000000" width="183" height="21" fill="black"></rect>
 </mask></svg></svg>
-            <ul style="list-style-type: none">
-                <li id='list_898.1'><a href='#list_898.1' class='selfref'><b>1</b></a> The user (GoodAir employee) accesses the DOME portal or to perform the onboarding process.                </li>
-                <li id='list_898.2'><a href='#list_898.2' class='selfref'><b>2</b></a> The portal redirects the user to the login page of the Verifier component of DOME Onboarding. The page shows a button labelled “Login with Verifiable Credentials” or something similar.                </li>
-                <li id='list_898.3'><a href='#list_898.3' class='selfref'><b>3</b></a> The user clicks the button causing the generation and display of a QR, containing inside the URL of the `/authentication-requests` endpoint of the Verifier component.                </li>
-                <li id='list_898.4'><a href='#list_898.4' class='selfref'><b>4</b></a> The user scans the QR with her mobile and the mobile calls the `/authentication-requests` endpoint.                </li>
-            </ul>
 
+            <ul>
+                <li id='889.1'><a href='#889.1' class='selfref'><b>1</b></a> The user (GoodAir employee) accesses the DOME portal or to perform the onboarding process.
+                <li id='892.2'><a href='#892.2' class='selfref'><b>2</b></a> The portal redirects the user to the login page of the Verifier component of DOME Onboarding. The page shows a button labelled “Login with Verifiable Credentials” or something similar.
+                <div> Esta es una linea añadida a la anterior</div>
+                <div> Esta es una linea añadida a la anterior</div>
+                <div> Esta es una linea añadida a la anterior</div>
+                <div> Esta es una linea añadida a la anterior</div>
+                <li id='899.3'><a href='#899.3' class='selfref'><b>3</b></a> The user clicks the button causing the generation and display of a QR, containing inside the URL of the `/authentication-requests` endpoint of the Verifier component.
+                <li id='903.4'><a href='#903.4' class='selfref'><b>4</b></a> The user scans the QR with her mobile and the mobile calls the `/authentication-requests` endpoint.
+            </ul>
         </section>
 
 
