Add section on raxonomy

--- a/authn.html
+++ b/authn.html
@@ -235,15 +235,24 @@
                 </p>
             </p>
         </section>
-        <section><h2>Authentication requires a VerifiableID</h2>
+        <section><h2>A taxonomy of Verifiable Credentials</h2>
 
-            <p>Not all types of Verifiable Credentials can be used as a mechanism for online authentication, because the Relying Party (the entity receiving the Verifiable Credential in an authentication process) needs to bind the identity of the user sending the credential to the claims attested about the subject inside the credential.
+            <p>The objectives defined above can be achieved in different ways. We define here an approach that tries to standardise the detailed mechanisms so it can be adopted easily by anyone who wants to obtain the associated benefits. If the approach is adopted in an ecosystem, it provides a high level of interoperability among the participants in the ecosystem, reducing also the risks associated to mistakes in the implementation.
+            </p>
+            <p>To describe precisely the approach, we define a taxonomy of the relevant Verifiable Credentials that we need.
             </p>
             <p>For the purpose of this discussion we use a diagram derived from the taxonomy <a href="https://ec.europa.eu/digital-building-blocks/wikis/display/EBSIDOC/Data+Models+and+Schemas">defined in EBSI</a>:
             </p>
             <figure><img src='builtassets/plantuml_78bc41a433a2657fc60dd292cca51c5d.png' alt=''>
             <figcaption>Types of credentials</figcaption></figure>
 
+            <p>The sections below refer to this diagram for each type of credential discussed.
+            </p>
+        </section>
+        <section><h2>Authentication requires a VerifiableID</h2>
+
+            <p>Not all types of Verifiable Credentials can be used as a mechanism for online authentication, because the Relying Party (the entity receiving the Verifiable Credential in an authentication process) needs to bind the identity of the user sending the credential to the claims attested about the subject inside the credential.
+            </p>
             <p>For example, in the case of a Diploma as a Verifiable Credential (a Verifiable Diploma), the credential is a Verifiable Attestation which indicates that the subject has certain skills or has achieved certain learning outcomes through formal or non-formal learning context. However, as in the case with normal Diplomas in paper of PDF format, this credential can be presented by anyone that holds the credential. In other words, the credential binds the identity of the subject with the claims inside the credential, but does not bind the identity of the holder of the credential with the identity of the subject of the credential, which requires a special mechanism in the issuance process.
             </p>
             <p>Most Verifiable Credentials will be issued as Verifiable Attestations, acting as efficient machine-processable and verifiable equivalent to their analog counterparts. Their purpose is to attest some attributes about the subject of the credential and not act as a mechanism for online authentication.
