--- a/authn.html
+++ b/authn.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Authentication and Authorization of Legal Persons with Verifiable Credentials</title>
+    <title>Authentication and authorization of entities acting on behalf of legal persons with Verifiable Credentials under eIDAS framework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Opengraph Facebook Meta Tags -->
-    <meta property="og:title" content="Authentication and Authorization of Legal Persons with Verifiable Credentials">
+    <meta property="og:title" content="Authentication and authorization of entities acting on behalf of legal persons with Verifiable Credentials under eIDAS framework">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Authentication and Authorization of Legal Persons with Verifiable Credentials">
+    <meta property="og:description" content="Authentication and authorization of entities acting on behalf of legal persons with Verifiable Credentials under eIDAS framework">
     <meta property="og:site_name" content="Authn with Verifiable Credentials">
     <meta property="og:url" content="https://alastria.github.io/did-method-elsi/authn.html">
 
@@ -176,7 +176,7 @@
 
 
 <section id='abstract'>
-        <p>We describe here a mechanism to perform authentication and access control of legal persons using Verifiable Credentials by:
+        <p>We describe here a mechanism to perform authentication and access control of legal persons or entities acting on behalf of a legal person using Verifiable Credentials by:
         </p>
         <ul>
             <li>making the credential a <code>legally binding document</code> under the [[eIDAS]] framework, by signing the credential with an advanced or qualified seal/signature;
@@ -197,7 +197,7 @@
 
     <section id='Introduction'><h2>Introduction</h2>
 
-        <p>We describe here a mechanism to perform authentication and access control of legal persons using Verifiable Credentials by:
+        <p>We describe here a mechanism to perform authentication and access control of legal persons or entities acting on behalf of a legal person using Verifiable Credentials by:
         </p>
         <ul>
             <li>making the credential a <code>legally binding document</code> under the [[eIDAS]] framework, by signing the credential with an advanced or qualified seal/signature;
