Move bibliography to separate file

--- a/authn.html
+++ b/authn.html
@@ -21,7 +21,7 @@
             editors: [
                 {
                     company: "JesusRuiz",
-                    companyURL: "https://hesusruiz.github.io/hesusruiz",
+                    companyURL: "https://hesusruiz.github.io/",
                     email: "hesusruiz@gmail.com",
                     name: "Jesus Ruiz",
                 },
@@ -1261,7 +1261,7 @@ Cache-Control<span style="color:#000;font-weight:bold">:</span> no-store
     </section>
     <section id='Authenticating with Verifiable Credentials'><h2>Authenticating with Verifiable Credentials</h2>
 
-        <section id='Overview1165'><h2>Overview</h2>
+        <section id='Overview1036'><h2>Overview</h2>
 
             <p>Authentication requires a special type of Verifiable Credential called a VerifiableID. For the examples illustrating the mechanism we will use a LEARCredential, which is at the same time a VerifiableId and a Verifiable Authorization.
             </p>
@@ -1665,7 +1665,7 @@ access_token=[the access token]
     </section>
     <section id='accesscontrol'><h2>Access control with Verifiable Credentials</h2>
 
-        <section id='Overview1553'><h2>Overview</h2>
+        <section id='Overview1424'><h2>Overview</h2>
 
             <p>This section assumes that authentication has already been performed and that the Relying Party receives a request to a protected resource, with a proper access token inside the request. If the request does not come with an access token, the request is rejected immediately (or the user is redirected to the Authentication service of the Relying Party, depending on the use case).
             </p>
