--- a/authn.html
+++ b/authn.html
@@ -196,11 +196,13 @@
 
 
 <section id='abstract'>
-    <p>We describe a mechanism which combines eIDAS X.509 certificates issued by QTSPs, advanced or qualified signatures and seals, and Verifiable Credentials to enable Decentralised Identity and Access Management (DIAM) in B2B ecosystems where it is required a high level of legal certainty, reduced manual processes and reduced dependency in third parties for the operation of the ecosystem.
+    <p>We describe a mechanism enabling <b>Decentralised Identity and Access Management in B2B</b> ecosystems which require a high level of legal certainty, reduced manual processes and reduced dependency in third parties for the operation of the ecosystem. It combines eIDAS X.509 certificates issued by QTSPs with advanced or qualified signatures and seals of Verifiable Credentials.
     </p>
     <p>The mechanism enables authentication and access control of <b>entities acting on behalf of a legal person</b> with much more descriptive power and flexibility than trying to use just X.509 certificates of representation, and in a more efficient and automated way than using just signed PDFs.
     </p>
-    <p>The mechanism is aligned with the upcoming EDIW (European Digital Identity Wallet) and its supporting eIDAS2 regulation, but it advances the state of the art by focusing entirely on legal persons. The mechanism can <b>not</b> be used for natural persons, but for legal persons there is no need to wait for future regulation and it can be implemented today.
+    <p>The mechanism is aligned with the upcoming EDIW (European Digital Identity Wallet) and its supporting eIDAS2 regulation, but it advances the state of the art by focusing entirely on <b>legal persons</b> with an implementation that can be used today without the need to wait for future supporting regulation.
+    </p>
+    <p>The mechanism is <b>not recommended for natural persons</b>, even if technically could be adapted. For natural persons we recommend to wait for eIDAS2 and EDIW.
     </p>
     <p>The mechanism leverages Verifiable Credentials and the existing eIDAS framework by:
     </p>
@@ -251,7 +253,7 @@
         </p>
         <ul>
             <li id='REQ-01'><b>REQ-01</b>: <b>The credential is an e-mandate</b>, by embedding authorisation information in the credential and binding it to the identities of the issuer and subject. We call such a credential a "Verifiable Authorisation".
-                <p>We need to define a <b>controlled vocabulary</b> that can be used to express in a formal language (e.g. ODRL) the semantics of the powers delegated to a Principal by the Participant.
+                <p>There must be a <b>controlled vocabulary</b> that can be used to express in a formal language (e.g. ODRL) the semantics of the powers delegated to a Principal by the Participant.
                 </p>
             </li>
             <li id='REQ-02'><b>REQ-02</b>: <b>The Relying Party does not have to know in advance the Principal</b> accessing its services on behalf of a Participant.
@@ -1265,7 +1267,7 @@ Cache-Control<span style="color:#000;font-weight:bold">:</span> no-store
     </section>
     <section id='Authenticating with Verifiable Credentials'><h2>Authenticating with Verifiable Credentials</h2>
 
-        <section id='Overview1040'><h2>Overview</h2>
+        <section id='Overview1042'><h2>Overview</h2>
 
             <p>Authentication requires a special type of Verifiable Credential called a VerifiableID. For the examples illustrating the mechanism we will use a LEARCredential, which is at the same time a VerifiableId and a Verifiable Authorization.
             </p>
@@ -1669,7 +1671,7 @@ access_token=[the access token]
     </section>
     <section id='accesscontrol'><h2>Access control with Verifiable Credentials</h2>
 
-        <section id='Overview1428'><h2>Overview</h2>
+        <section id='Overview1430'><h2>Overview</h2>
 
             <p>This section assumes that authentication has already been performed and that the Relying Party receives a request to a protected resource, with a proper access token inside the request. If the request does not come with an access token, the request is rejected immediately (or the user is redirected to the Authentication service of the Relying Party, depending on the use case).
             </p>
