--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script class="remove">
         var respecConfig = {
             latestVersion: "https://DOME-Marketplace.github.io/did-method-elsi/",
-            github: "https://github.com/in the form of delegation of powers/did-method-elsi",
+            github: "https://github.com/DOME-Marketplace/did-method-elsi",
             editors: [
                 {
                     company: "JesusRuiz",
